--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,11 @@
 *.userosscache
 *.sln.docstates
 
+
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
+.idea
 
 # Mono auto generated files
 mono_crash.*
