--- a/AbilitySystem.Tests/AbilitySystem.Tests.csproj
+++ b/AbilitySystem.Tests/AbilitySystem.Tests.csproj
@@ -1,18 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <LangVersion>9</LangVersion>
-    <Nullable>enable</Nullable>
     <Configurations>Debug;Release;Test</Configurations>
     <Platforms>AnyCPU</Platforms>
+    <LangVersion>9</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AbilitySystem.Ability\AbilitySystem.Ability.csproj" />
+    <ProjectReference Include="..\AbilitySystem.Implementation\AbilitySystem.Implementation.csproj" />
+    <ProjectReference Include="..\AbilitySystem.Execution\AbilitySystem.Execution.csproj" />
   </ItemGroup>
 
 </Project>
